<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="STRID_MODE_BACKGROUNDDEFOCUS">Background Defocus</string>
    <string name="STRID_CMN_ON">On</string>
    <string name="STRID_CMN_OFF">Off</string>
    <string name="STRID_CAU_INVALID_OPERATION_NGFILE_ML">Operation cannot be executed in\nunsupported files.</string>
    <string name="STRID_AMC_STR_00926">Cancel</string>
    <string name="STRID_AMC_STR_00987">Off</string>
    <string name="STRID_AMC_STR_01080">10 Sec</string>
    <string name="STRID_AMC_STR_01081">5 Sec</string>
    <string name="STRID_AMC_STR_01082">2 Sec</string>
    <string name="STRID_AMC_STR_01176">Processing...</string>
    <string name="STRID_AMC_STR_05309">Select Enter</string>
    <string name="STRID_AMC_STR_05339">OK</string>
    <string name="STRID_AMC_STR_00907">Crisp</string>
    <string name="STRID_AMC_STR_01869">Self-timer</string>
    <string name="STRID_AMC_STR_02045">Defocus</string>
    <string name="STRID_AMC_STR_06553">Enter</string>
    <string name="STRID_SAVING_DIALOG">Saving...</string>
    <string name="STRID_FUNC_BEAUTYEFFECT_MSG_COMFIRMRESET">Return to face select?\nIf you return, effects will be reset.</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_GUIDE">Changes the self-timer setting.</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_OFF_GUIDE">Will not use self-timer.</string>
    <string name="STRID_FOOTERGUIDE_ENTER_RETURN">Enter </string>
    <string name="STRID_FOOTERGUIDE_ENTER_RETURN_SK">Enter </string>
    <string name="STRID_CAU_LENS_IS_NOT_ATTACHED">Check that a lens is mounted.\nFor an unsupported lens, set\n\"Release w/o Lens\" in the menu\nto \"Enable\".</string>
    <string name="STRID_CAU_TIMELAPSE_LENS_STEADYSHOT">Use this application with SteadyShot of lens off.</string>
    <string name="STRID_FUNC_SELFIE_LAUNCHER_NAME">Portrait Beauty</string>
    <string name="STRID_FUNC_SELFIE_LAUNCHER_GUIDE">You can create a portrait image that a subject\'s face looks beautiful using the face brightening and soft skin effects. You can apply your preferred catch light patterns on their eyes after shooting.</string>
    <string name="STRID_FUNC_SELFIE_LAUNCHER_NAME_2L">Portrait\nBeauty</string>
    <string name="STRID_FUNC_SELFIE_AL_ENTRYGUIDE_ADJUST">You can adjust the face brightening and soft skin levels.Adjust visually? You can reset by menu \"Adjust Visually\". Image captured for adjustment won\'t be saved.</string>
    <string name="STRID_FUNC_SELFIE_AL_ENTRYGUIDE_SETUP">You can set the face brightening and soft skin levels.Set visually? You can reset by menu \"Set Visually\".Image captured for adjustment won\'t be saved.</string>
    <string name="STRID_FUNC_SELFIE_AL_ENTRYGUIDE_MAKE">You can set the face brightening and soft skin levels.Set it now?You can reset by menu \"Make-up Setting\".Image captured for adjustment won\'t be saved.</string>
    <string name="STRID_FUNC_SELFIE_AL_ENTRYGUIDE_MAKEUP">You can set the face brightening and soft skin levels.Set it now?You can reset by menu \"Make-up Setting\".Image captured for adjustment won\'t be saved.</string>
    <string name="STRID_FUNC_SELFIE_AL_ENTRYGUIDE_YES">Yes</string>
    <string name="STRID_FUNC_SELFIE_AL_ENTRYGUIDE_SKIP">Skip</string>
    <string name="STRID_FUNC_SELFIE_AL_ADJUST_NAME">Adjust Visually</string>
    <string name="STRID_FUNC_SELFIE_AL_SETUP_NAME">Set Visually</string>
    <string name="STRID_FUNC_SELFIE_AL_MAKE_NAME">Make-up Setting</string>
    <string name="STRID_FUNC_SELFIE_AL_MAKEUP_NAME">Make-up Setting</string>
    <string name="STRID_FUNC_SELFIE_AL_SHOOTINGGUIDE">Shoot 1 image.</string>
    <string name="STRID_FUNC_SELFIE_AL_ADJUSTGUIDE">Adjusts the face brightening and soft skin levels. This image will not be saved.</string>
    <string name="STRID_FUNC_SELFIE_AL_ADJUSTGUIDE_SAVE">Adjusts the face brightening and soft skin levels.</string>
    <string name="STRID_FUNC_SELFIE_WHITESKIN">Face Brightening</string>
    <string name="STRID_FUNC_SELFIE_WHITESKIN_OFF">Off</string>
    <string name="STRID_FUNC_SELFIE_WHITESKIN_LOW">Low</string>
    <string name="STRID_FUNC_SELFIE_WHITESKIN_HIGH">High</string>
    <string name="STRID_FUNC_SELFIE_SOFTSKIN">Soft Skin</string>
    <string name="STRID_FUNC_SELFIE_BKGROUNDDEFOCUS_ADJUST_CAUTION">You cannot adjust background defocus in \"Adjust Visually\".</string>
    <string name="STRID_FUNC_SELFIE_BKGROUNDDEFOCUS_SETUP_CAUTION">You cannot adjust background defocus in \"Set Visually\".</string>
    <string name="STRID_FUNC_SELFIE_BKGROUNDDEFOCUS_MAKE_CAUTION">You cannot adjust background defocus in \"Make-up Setting\".</string>
    <string name="STRID_FUNC_SELFIE_BKGROUNDDEFOCUS_MAKEUP_CAUTION">You cannot adjust background defocus in \"Make-up Setting\".</string>
    <string name="STRID_FUNC_SELFIE_AL_FGUIDE_PJONE">Enter Cancel Reset</string>
    <string name="STRID_FUNC_SELFIE_AL_FGUIDE_EYCS">Enter Cancel Reset</string>
    <string name="STRID_FUNC_SELFIE_AL_SAVE_FGUIDE_PJONE">Save &amp; Enter Reset</string>
    <string name="STRID_FUNC_SELFIE_AL_SAVE_FGUIDE_EYCS">Save &amp; Enter Reset</string>
    <string name="STRID_FUNC_SELFIE_SELFTIMER_5SEC_GUIDE">Captures 1 image 5 seconds after pressing shutter button.</string>
    <string name="STRID_FUNC_SELFIE_AL_GUIDE_SETUP">You can set the face brightening and soft skin levels while viewing the effects.</string>
    <string name="STRID_FUNC_SELFIE_AL_GUIDE_ADJUST">You can adjust the face brightening and soft skin levels while viewing the effects.</string>
    <string name="STRID_FUNC_SELFIE_PLAY_FGUIDE_PJONE">Catch Light</string>
    <string name="STRID_FUNC_SELFIE_AUTOREVIEW_FGUIDE_PJONE">Add Catch Light</string>
    <string name="STRID_FUNC_SELFIE_SELECT_PERSON_FGUIDE_PJONE">Select Enter Cancel</string>
    <string name="STRID_FUNC_SELFIE_SELECT_PERSON_FGUIDE_EYCS">Select Enter Cancel</string>
    <string name="STRID_FUNC_SELFIE_CL_PATTERN">Pattern</string>
    <string name="STRID_FUNC_SELFIE_CL_SIZE">Size</string>
    <string name="STRID_FUNC_SELFIE_CL_BRIGHTNESS">Brightness</string>
    <string name="STRID_FUNC_SELFIE_CL_POSITION_LEFT">Position (Left)</string>
    <string name="STRID_FUNC_SELFIE_CL_POSITION_RIGHT">Position (Right)</string>
    <string name="STRID_FUNC_SELFIE_CL_SAVE">Save</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_FGUIDE_PJONE">Select Adjust Cancel</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_FGUIDE_EYCS">Select Adjust Cancel</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_BRIGHTNESS_FGUIDE_PJONE">Position Enter Cancel</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_BRIGHTNESS_FGUIDE_EYCS">Position Enter Cancel</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_POSITION_SCREEN_GUIDE">Goes to the adjustment screen with .</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_POSITION_GUIDE">Adjusts with .</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_CANCELSCREEN">Return to subject selection? Effects will be reset if you do return.</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_CANCELSCREEN_CONFIRM">Yes</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_CANCELSCREEN_CANCEL">No</string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEWIMAGE_FGUIDE_PJONE">Verify before effect status Save </string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEW_FGUIDE_PJONE">Compare with original Save </string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEWIMAGE_FGUIDE_EYCS">Verify before effect status Save </string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEW_FGUIDE_EYCS">Compare with original Save </string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEW_AFTER">After Effect</string>
    <string name="STRID_FUNC_SELFIE_CL_CONFIRM_SAVE">Save?</string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEWORIG_FGUIDE_PJONE"></string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEWORIG_FGUIDE_EYCS"></string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEW_BEFORE">Before Effect</string>
    <string name="STRID_FUNC_SELFIE_TARGET_DETECTED">Unable to detect a face.</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUST_CANCEL">Return to image selection? Effects will be reset if you do return.</string>
    <string name="STRID_FUNC_SELFIE_BKGROUNDDEFOCUS_CAUTION">You cannot adjust background defocus in \"Set Visually\". You can adjust in Application Settings.</string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEW">Preview</string>
    <string name="STRID_FUNC_SELFIE_CL_ORIGINAL">Original</string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEWIMG_FGUIDE_PJONE">Original Save </string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEWIMG_FGUIDE_EYCS">Original Save </string>
    <string name="STRID_FUNC_SELFIE_CL_ORGIMG_FGUIDE_PJONE">Preview</string>
    <string name="STRID_FUNC_SELFIE_CL_ORGIMG_FGUIDE_EYCS">Preview</string>
    <string name="STRID_FUNC_SELFIE_LAUNCHER_NAME_MY">My Best Portrait</string>
    <string name="STRID_FUNC_SELFIE_LAUNCHER_NAME_MY_2L">My Best \nPortrait</string>
    <string name="STRID_FUNC_SELFIE_ADJUST_VISUALLY_SETTING">\"Adjust Visually\" at startup</string>
    <string name="STRID_FUNC_SELFIE_ADJUST_VISUALLY_SETTING_GUIDE">Sets to show \"Adjust Visually\" at startup of this application.</string>
    <string name="STRID_FUNC_SELFIE_ADJUST_VISUALLY_SETTING_GUIDE_OFF">Does not show \"Adjust Visually\" at startup of this application.</string>
    <string name="STRID_FUNC_SELFIE_ADJUST_VISUALLY_SETTING_GUIDE_ON">Shows \"Adjust Visually\" at startup of this application.</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUSTPOS_FGUIDE_PJONE">Select Adjust Cancel</string>
    <string name="STRID_FUNC_SELFIE_CL_ADJUSTPOS_FGUIDE_EYCS">Select Adjust Cancel</string>
    <string name="STRID_FUNC_SELFIE_ADJUSTVISUALLY_STEP1">Take a test shot of your face</string>
    <string name="STRID_FUNC_SELFIE_ADJUSTVISUALLY_STEP2">Adjust the face brightening and soft skin levels</string>
    <string name="STRID_FUNC_SELFIE_ADJUSTVISUALLY_STEP3">Adust level has been set.\nPlease press OK to proceed.</string>
    <string name="STRID_FUNC_SELFIE_EFFECTLEVELSETTINGS">Effect Level Settings</string>
    <string name="STRID_FUNC_SELFIE_BACKGROUNDDEFOCUS_INVALID">You cannot adjust background defocus in \"Adjust Visually\". You can adjust at  \"Effect Level Settings\" in the menu.</string>
    <string name="STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_ENTRY">Would you like to adjust the face brightening and soft skin levels by \"Adjust Visually\"?</string>
    <string name="STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_PROCESS">Process:</string>
    <string name="STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_1">1. Take a test shot of your face.\nThe captured image will not be saved.</string>
    <string name="STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_2">2. Adjust the face brightening and soft skin levels.</string>
    <string name="STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_3">3. Adjust level has been set.\nPlease press OK to proceed for actual shooting.</string>
    <string name="STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_RESET_ADJUST">You can reset \"Adjust Visually\" from the menu.</string>
    <string name="STRID_FUNC_SELFIE_GUIDE_EFFECT_LEVEL_SETTINGS">Sets the levels of face brightening and soft skin.</string>
    <string name="STRID_FUNC_SELFIE_GUIDE_LEVEL_SETTINGS">Sets the levels of face brightening, soft skin, and background defocus.</string>
</resources>
