<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.sony.scalar.widget.OptimizedImageView
        android:id="@+id/preview_opt_img_view"
        android:layout_width="640px"
        android:layout_height="480px"
        android:layout_marginLeft="0px"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="center"
        android:id="@+id/title_text"
        android:layout_width="640px"
        android:layout_height="46px"
        android:layout_marginLeft="18px"
        android:layout_marginTop="6px"
        android:text="@string/STRID_FUNC_SELFIE_CL_ORIGINAL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide"
        android:background="0x1080a15"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:guide_text_style="@attr/menu_footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="12px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FUNC_SELFIE_CL_ORGIMG_FGUIDE_PJONE"
        base:guide_text_emt="@string/STRID_FUNC_SELFIE_CL_ORGIMG_FGUIDE_EYCS"/>
</RelativeLayout>
