<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="340px"
        android:layout_marginTop="54px"
        android:fadeScrollbars="false">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                android:id="@+id/adjust_text"
                android:layout_width="580px"
                android:layout_height="168px"
                android:layout_marginLeft="30px"
                android:layout_marginTop="16px"
                android:text="@string/STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_ENTRY"
                style="@style/RESID_FONTSIZE_STD_L_EDGE_OFF"/>
            <TextView
                android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                android:id="@+id/adjust_text_process"
                android:layout_width="580px"
                android:layout_height="56px"
                android:layout_marginLeft="30px"
                android:layout_marginTop="5px"
                android:text="@string/STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_PROCESS"
                style="@style/RESID_FONTSIZE_STD_L_EDGE_OFF"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/image_step_one"
                    android:layout_width="128px"
                    android:layout_height="128px"
                    android:layout_marginLeft="30px"
                    android:layout_marginTop="14px"
                    android:src="@drawable/p_16_dd_adjustvisullay_step1"/>
                <TextView
                    android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                    android:id="@+id/guide_step_one"
                    android:layout_width="446px"
                    android:layout_height="168px"
                    android:layout_marginLeft="6px"
                    android:layout_marginTop="14px"
                    android:text="@string/STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_1"
                    style="@style/RESID_FONTSIZE_STD_L_EDGE_OFF"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/image_step_two"
                    android:layout_width="128px"
                    android:layout_height="128px"
                    android:layout_marginLeft="30px"
                    android:layout_marginTop="10px"
                    android:src="@drawable/p_16_dd_adjustvisullay_step2"/>
                <TextView
                    android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                    android:id="@+id/guide_step_two"
                    android:layout_width="446px"
                    android:layout_height="112px"
                    android:layout_marginLeft="6px"
                    android:layout_marginTop="10px"
                    android:text="@string/STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_2"
                    style="@style/RESID_FONTSIZE_STD_L_EDGE_OFF"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/image_step_three"
                    android:layout_width="128px"
                    android:layout_height="128px"
                    android:layout_marginLeft="30px"
                    android:layout_marginTop="40px"
                    android:src="@drawable/p_16_dd_adjustvisullay_step3"/>
                <TextView
                    android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                    android:id="@+id/guide_step_three"
                    android:layout_width="446px"
                    android:layout_height="168px"
                    android:layout_marginLeft="6px"
                    android:layout_marginTop="40px"
                    android:text="@string/STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_3"
                    style="@style/RESID_FONTSIZE_STD_L_EDGE_OFF"/>
            </LinearLayout>
            <TextView
                android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                android:id="@+id/text_reset"
                android:layout_width="580px"
                android:layout_height="168px"
                android:layout_marginLeft="30px"
                android:layout_marginTop="14px"
                android:text="@string/STRID_FUNC_SELFIE_ADJUSTVISUALLY_GUIDE_RESET_ADJUST"
                style="@style/RESID_FONTSIZE_STD_L_EDGE_OFF"/>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="center"
        android:id="@+id/adjust_yes"
        android:background="@drawable/bt_x_56"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="240px"
        android:layout_height="56px"
        android:layout_marginLeft="70px"
        android:layout_marginTop="408px"
        android:text="@string/STRID_FUNC_SELFIE_AL_ENTRYGUIDE_YES"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="center"
        android:id="@+id/adjust_skip"
        android:background="@drawable/bt_x_56"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="240px"
        android:layout_height="56px"
        android:layout_marginLeft="330px"
        android:layout_marginTop="408px"
        android:text="@string/STRID_FUNC_SELFIE_AL_ENTRYGUIDE_SKIP"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
</RelativeLayout>
