<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="center"
        android:id="@+id/menu_screen_title"
        android:layout_width="604px"
        android:layout_height="46px"
        android:layout_marginLeft="20px"
        android:layout_marginTop="4px"
        android:text="@string/STRID_FUNC_SELFIE_EFFECTLEVELSETTINGS"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <ImageView
        android:id="@+id/icon_bg"
        android:layout_width="192px"
        android:layout_height="66px"
        android:layout_marginLeft="224px"
        android:layout_marginTop="360px"
        android:src="@drawable/p_16_dd_parts_common_button_background"
        android:scaleType="fitXY"/>
    <ImageView
        android:background="@drawable/p_16_dd_parts_pe_parameter_separater"
        android:layout_width="2px"
        android:layout_height="66px"
        android:layout_marginLeft="319px"
        android:layout_marginTop="360px"/>
    <TextView
        android:gravity="center"
        android:id="@+id/whitening_effect_guide"
        android:background="@drawable/p_16_dd_parts_portraitbeauty_adjusteffect_balloon"
        android:layout_width="310px"
        android:layout_height="48px"
        android:layout_marginLeft="117px"
        android:layout_marginTop="298px"
        android:scaleType="fitXY"
        android:text="@string/STRID_FUNC_SELFIE_WHITESKIN"
        style="@style/RESID_FONTSIZE_BIG_S_EDGE_ON"/>
    <ImageView
        android:id="@+id/whitening_effect_guide_arrow"
        android:background="@drawable/p_16_dd_parts_portraitbeauty_adjusteffect_arrowofballoon"
        android:layout_width="16px"
        android:layout_height="14px"
        android:layout_marginLeft="264px"
        android:layout_marginTop="346px"/>
    <ImageView
        android:id="@+id/whitening_effect"
        android:background="@drawable/state_list_selector"
        android:layout_width="96px"
        android:layout_height="66px"
        android:layout_marginLeft="224px"
        android:layout_marginTop="360px"
        android:src="@drawable/p_16_dd_parts_portraitbeauty_whiteskin_level4"/>
    <TextView
        android:gravity="center"
        android:id="@+id/softskin_effect_guide"
        android:background="@drawable/p_16_dd_parts_portraitbeauty_adjusteffect_balloon"
        android:layout_width="335px"
        android:layout_height="48px"
        android:layout_marginLeft="200px"
        android:layout_marginTop="298px"
        android:scaleType="fitXY"
        android:text="@string/STRID_FUNC_SELFIE_SOFTSKIN"
        style="@style/RESID_FONTSIZE_BIG_S_EDGE_ON"/>
    <ImageView
        android:id="@+id/softskin_effect_guide_arrow"
        android:background="@drawable/p_16_dd_parts_portraitbeauty_adjusteffect_arrowofballoon"
        android:layout_width="16px"
        android:layout_height="14px"
        android:layout_marginLeft="360px"
        android:layout_marginTop="346px"/>
    <ImageView
        android:id="@+id/softskin_effect"
        android:background="@drawable/state_list_selector"
        android:layout_width="96px"
        android:layout_height="66px"
        android:layout_marginLeft="320px"
        android:layout_marginTop="360px"
        android:src="@drawable/p_16_dd_parts_portraitbeauty_softskin_mid"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="right"
        android:id="@+id/vsb_plus"
        android:layout_width="300px"
        android:layout_height="38px"
        android:layout_marginLeft="282px"
        android:layout_marginTop="90px"
        android:text="@string/STRID_FUNC_SELFIE_WHITESKIN_HIGH"
        style="@style/RESID_FONTSIZE_BIG_S_EDGE_ON"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="right"
        android:id="@+id/vsb_minus"
        android:layout_width="300px"
        android:layout_height="38px"
        android:layout_marginLeft="283px"
        android:layout_marginTop="274px"
        android:text="@string/STRID_FUNC_SELFIE_WHITESKIN_LOW"
        style="@style/RESID_FONTSIZE_BIG_S_EDGE_ON"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="right"
        android:id="@+id/vsb_off"
        android:layout_width="300px"
        android:layout_height="38px"
        android:layout_marginLeft="283px"
        android:layout_marginTop="321px"
        android:text="@string/STRID_FUNC_SELFIE_WHITESKIN_OFF"
        style="@style/RESID_FONTSIZE_BIG_S_EDGE_ON"/>
    <ImageView
        android:id="@+id/vsb_off_icon"
        android:layout_width="34px"
        android:layout_height="34px"
        android:layout_marginLeft="587px"
        android:layout_marginTop="323px"
        android:src="@drawable/p_16_dd_parts_portraitbeauty_skineffect_bar_off"
        android:scaleType="fitXY"/>
    <ImageView
        android:id="@+id/seek_bar_bg_ws"
        android:background="@drawable/p_16_dd_parts_pe_gauge_background"
        android:layout_width="72px"
        android:layout_height="226px"
        android:layout_marginLeft="568px"
        android:layout_marginTop="88px"
        android:src="@drawable/p_16_dd_parts_portraitbeauty_backgrounddefocus_bar_filling"
        android:scaleType="fitXY"/>
    <com.sony.imaging.app.portraitbeauty.shooting.widget.PortraitBeautyVerticalSeekBar
        android:id="@+id/vertical_seekbar_ws"
        android:layout_width="72px"
        android:layout_height="262px"
        android:layout_marginLeft="588px"
        android:layout_marginTop="88px"
        android:max="7"
        android:progressDrawable="@null"
        android:thumb="@drawable/p_16_dd_parts_common_gauge_scale_circle"
        android:thumbOffset="0px"/>
    <com.sony.imaging.app.base.menu.layout.SpecialScreenView
        android:id="@+id/listview"
        android:scrollbars="none"
        android:fadingEdge="none"
        android:layout_width="110px"
        android:layout_height="352px"
        android:layout_marginLeft="537px"
        android:layout_marginTop="44px"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="0px"
        android:smoothScrollbar="true"/>
    <com.sony.imaging.app.base.menu.layout.SpecialScreenArea
        android:id="@+id/listviewarea"
        android:layout_width="640px"
        android:layout_height="480px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="0px"/>
    <include
        android:id="@+id/pb_parts_cmn_deletor_multiple_footer_guide_count"
        layout="@layout/pb_parts_cmn_deletor_multiple_footer_guide_count"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide"
        android:background="0x1080a15"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:guide_text_style="@attr/menu_footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="12px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FUNC_SELFIE_AL_FGUIDE_PJONE"
        base:guide_text_emt="@string/STRID_FUNC_SELFIE_AL_FGUIDE_EYCS"/>
</RelativeLayout>
