<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/confirm_text"
        android:layout_width="484px"
        android:layout_height="224px"
        android:layout_marginLeft="78px"
        android:layout_marginTop="65px"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_OFF"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="center"
        android:id="@+id/ok_yes"
        android:background="@drawable/bt_x_56"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="240px"
        android:layout_height="50px"
        android:layout_marginLeft="200px"
        android:layout_marginTop="305px"
        android:text="@string/STRID_AMC_STR_05339"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="center"
        android:id="@+id/cancel_text"
        android:background="@drawable/bt_x_56"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="240px"
        android:layout_height="50px"
        android:layout_marginLeft="200px"
        android:layout_marginTop="365px"
        android:text="@string/STRID_AMC_STR_00926"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide"
        android:background="0x1080a15"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:guide_text_style="@attr/menu_footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="12px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_AMC_STR_05309"
        base:guide_text_emt="@string/STRID_AMC_STR_05309"/>
</RelativeLayout>
